<resources>
    <string name="app_name">Vakna</string>
    <string name="title_taches">Quêtes</string>
    <string name="title_ajouter">Ajouter</string>
    <string name="title_magasin">Magasin</string>
    <string name="title_compagnon">Compagnon</string>
    <string name="edit_name">Modifier le nom</string>
    <string-array name="typeTacheExemple">
        <item>PERSONNELLE</item>
        <item>PROFESSIONNELLE</item>
        <item>PROJET</item>
        <item>ETUDES</item>
        <item>SPORT</item>
        <item>AUTRE</item>
    </string-array>
    <string name="type_personnelle">PERSONNELLE</string>
    <string name="type_professionnelle">PROFESSIONNELLE</string>
    <string name="type_projet">PROJET</string>
    <string name="type_etudes">ETUDES</string>
    <string name="type_sport">SPORT</string>
    <string name="type_autre">AUTRE</string>
    <string name="create_task_button">Créer une quête</string>
    <string name="cancel_task_creation_button">Annuler</string>
    <string name="task_name_error">Le nom de la quête est obligatoire</string>
    <string name="frequency_error">Veuillez sélectionner une fréquence</string>
    <string name="importance_error">Veuillez sélectionner une importance</string>
    <string name="navigate_to_tasks">Quêtes</string>
    <string name="title_add_task">Ajouter une quête</string>
    <string name="task_name_hint">Saisir le nom de la quête</string>
    <string name="new_name_hint">Nouveau nom</string>
    <string name="edit_name_dialog_title">Modifier le nom de ton compagnon</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="level_text">Niv. %1$d</string>
    <string name="humeur_text">%1$d/100</string>
    <string name="faim_text">%1$d/100</string>
    <string name="compagnon_cree_succes">Compagnon créé avec succès!</string>
    <string name="compagnon_existe_erreur">Erreur : Un compagnon avec ce nom existe déjà</string>
    <string name="objet_inconnu">Objet inconnu</string>
    <string name="niveau_format">Niveau : %1$d</string>
    <string name="cout_format">Coût : %1$d</string>
    <string name="description_non_disponible">Description non disponible</string>
    <string name="nombre_de_coins">Coins : %1$d</string>
    <string name="cout_total_format">Coût total : %1$d</string>
    <string name="modifier_task_title">Modifier la tâche &quot;%1$s&quot;</string>
    <string name="task_unknown">Quête inconnue</string>
    <string name="task_name_required">Le nom de la quête est obligatoire</string>
    <string name="task_edit_success">Quête modifiée avec succès</string>
    <string name="task_edit_failed">Échec de la modification de la quête</string>
    <string name="edit_task_button">Modifier</string>
    <string name="back_button">Retour</string>
    <string name="title_create_companion">Donnez un nom à votre compagnon</string>
    <string name="label_companion_name">Nom du compagnon :</string>
    <string name="hint_companion_name">ex: Veolia la dragonne</string>
    <string name="manage_tasks_title">Gérer ses quêtes</string>
    <string name="title_modifier_tache">Modifier la quête &quot;{nom tache ici}&quot;</string>
    <string name="label_task_name">Nom de la quête:</string>
    <string name="hint_task_name">ex: faire la vaisselle</string>
    <string name="label_task_type">Type de la quête :</string>
    <string name="label_task_frequency">Fréquence de la quête :</string>
    <string name="radio_daily">Quotidienne</string>
    <string name="radio_weekly">Hebdomadaire</string>
    <string name="radio_monthly">Mensuel</string>
    <string name="error_task_frequency">Veuillez sélectionner une fréquence</string>
    <string name="label_task_importance">Importance de la tâche :</string>
    <string name="radio_low">Faible</string>
    <string name="radio_medium">Moyen</string>
    <string name="radio_high">Élevée</string>
    <string name="error_task_importance">Veuillez sélectionner une importance</string>
    <string name="dialog_title_archive">Archiver la quête?</string>
    <string name="dialog_text_warning">Voulez-vous vraiment archiver la quête %1$s? Vous ne pourrez plus réactiver cette quête! Cependant, vous pourrez toujours la revoir dans la page d\'archive.</string>
    <string name="button_archive">Archiver</string>
    <string name="dialog_title_finish_task">Avez-vous fini cette quête?</string>
    <string name="dialog_text_confirm_finish">Si vous confirmez que vous avez bien terminé la quête %1$s.</string>
    <string name="button_finish">Terminer</string>
    <string name="dialog_text_work_quantity">Quelle quantité de travail pensez-vous avoir fourni?</string>
    <string name="button_low">Faible</string>
    <string name="button_medium">Moyenne</string>
    <string name="button_high">Élevée</string>
    <string name="dragon_name">Lucy la dragonne</string>
    <string name="tab_description">Tab navigation for toys and food</string>
    <string name="grid_view_items">Items available in the selected category</string>
    <string name="store_title">Magasin</string>
    <string name="manage_projects">Gérer les projets</string>
    <string name="add_project">Ajouter un projet</string>
    <string name="title_tasks">Quêtes</string>
    <string name="title_projects">Projets</string>
    <string name="manage_tasks">Gérer les quêtes</string>
    <string name="add_task">Ajouter une quêtes</string>
    <string name="daily_tasks">Journalier</string>
    <string name="weekly_tasks">Hebdomadaire</string>
    <string name="monthly_tasks">Mensuel</string>
    <string name="popup_store_title">Nom</string>
    <string name="message_empty_inventory_toys">Vous n\'avez aucun jouet disponible! Allez au magasin pour en acheter.</string>
    <string name="message_empty_inventory_food">Vous n\'avez aucune nourriture disponible! Allez au magasin pour en acheter.</string>
    <string name="popup_store_title_compagnon">Acheter un compagnon</string>
    <string name="popup_store_question">Vous n\'avez plus de {NOM OBJET}, voulez-vous en acheter plus?</string>
    <string name="popup_store_question_compagnon">Vous pouvez avoir un compagnon suplémentaire, \n voulez vous aller au magasin pour en acheter un?</string>
    <string name="store_button">Magasin</string>
    <string name="popup_usage_title">Nom</string>
    <string name="popup_usage_question">Combien voulez-vous utiliser de {NOM OBJET}.</string>
    <string name="use_button">Utiliser</string>
    <string name="task_title_placeholder">quête : (Celui qui est sélectionné)</string>
    <string name="task_name">Nom :</string>
    <string name="task_type">Quêtes :</string>
    <string name="creation_date">Date de Création</string>
    <string name="task_progress">Progression :</string>
    <string name="complete_task_button">Terminer la quête</string>
    <string name="settings">Paramètres</string>
    <string name="choose_language">Choisir la langue</string>
    <string name="select_language">Sélectionnez la langue pour l\'interface de l\'application.</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="theme">Thème</string>
    <string name="theme_description">Alternez entre les thèmes clair et sombre pour une meilleure expérience visuelle.</string>
    <string name="dark_mode">Mode sombre</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Activer ou désactiver les notifications pour les mises à jour et les rappels de l\'application.</string>
    <string name="enable_notifications">Activer les notifications</string>
    <string name="popup_title_no_more_items">Vous n\'avez plus de %1$s, voulez-vous en acheter plus?</string>
    <string name="popup_question_use_item">Combien voulez-vous utiliser de %1$s.</string>
    <string name="button_shop">Acheter</string>
    <string name="button_use">Utiliser</string>
    <string name="dialog_text_confirmation_task">Vous avez bien terminé la tâche %1$s?</string>
    <string name="button_cancel">Annuler</string>
    <string name="popup_title_select_days">Choisissez les jours</string>
    <string name="popup_selected_days">Jours sélectionnés : %1$s</string>
    <string name="day_monday">Lundi</string>
    <string name="day_tuesday">Mardi</string>
    <string name="day_wednesday">Mercredi</string>
    <string name="day_thursday">Jeudi</string>
    <string name="day_friday">Vendredi</string>
    <string name="day_saturday">Samedi</string>
    <string name="day_sunday">Dimanche</string>
    <string name="button_validate">Valider</string>
    <string name="choose_days_of_week">Choisissez les jours de la semaine :</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="validate">Valider</string>
    <string name="popup_title_choose_dates">Choisissez les dates</string>
    <string name="date_added">Date ajoutée : %1$s</string>
    <string name="date_already_selected">Date déjà sélectionnée</string>
    <string name="product_cost">Cout: %1$s</string>
    <string name="companion_species">Espece du compagnon :</string>
    <string name="tab_toys">Jouet</string>
    <string name="tab_food">Nourriture</string>
    <string name="tab_companions">Compagnons</string>
    <string name="release_compagnon">Etes vous capable de dire adieux à votre campagnon</string>
    <string name="title_release">Relacher</string>
    <string name="goodbye_myfriend">Aurevoir</string>
    <string name="refus_relacher">Non reste!</string>
    <string name="un_campagnon_restant">Il te reste un campagnon…</string>
    <string name="personalite_popup_title">Personnalité : %1$s</string>
    <string name="personalite_popup_message_gourmand"> Ce compagnon adore manger !</string>
    <string name="personalite_popup_message_joueur"> Ce compagnon aime beaucoup jouer !</string>
    <string name="personalite_popup_message_calme"> Ce compagnon est très paisible et détendu.</string>
    <string name="personalite_popup_message_avare">"Ce compagnon adore l'argent."</string>
    <string name="personalite_popup_message_grincheux"> Ce compagnon est souvent de mauvaise humeur.</string>
    <string name="personalite_popup_message_radin"> Ce compagnon est très économe, parfois trop.</string>
    <string name="personalite_popup_message_gentil"> Ce compagnon est d\'une grande bonté.</string>
    <string name="personalite_popup_message_joyeux"> Ce compagnon est toujours plein de joie.</string>
    <string name="personalite_popup_message_travailleur"> Ce compagnon est très investie.</string>
    <string name="personalite_popup_message_inconnue">Personnalité inconnue.</string>
    <string name="j_lundi">Lundi</string>
    <string name="j_Mardi">Mardi</string>
    <string name="j_Mercredi">Mercredi</string>
    <string name="j_Jeudi">Jeudi</string>
    <string name="j_Vendredi">Vendredi</string>
    <string name="j_Samedi">Samedi</string>
    <string name="j_Dimanche">Dimanche</string>
    <string name="select_refuges">Sélectionnez un refuge</string>
    <string name="refuge_description">Les refuges peuvent augmenter le gain d\'humeur ou de faim d\'un compagnon</string>
    <string name="no_refuge_title">Vous n\'avez aucun Refuges!</string>
    <string name="buy_refuges">Acheter</string>
    <string name="defaut_semaine">1/semaine</string>
    <string name="defaut_mois">1/mois</string>
    <string name="select">Sélectionner</string>
    <string name="personalite_gourmand">Gourmand</string>
    <string name="personalite_joueur">Joueur</string>
    <string name="personalite_calme">Calme</string>
    <string name="personalite_avare">Avare</string>
    <string name="personalite_grincheux">Grincheux</string>
</resources>