<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/dialog_title_finish_task"
        android:textSize="30dp"
        android:textColor="@color/couleurTitre"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/dialogTexteWarning"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_text_confirm_finish"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boutonTerminer"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/button_finish" />

        <Button
            android:id="@+id/boutonAnnuler"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/gray"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>
