<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="110dp"
    android:layout_marginStart="30dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/layoutPopUp"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/popupMagasinTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/popup_store_title_compagnon"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/popupMagasinQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/popup_store_question_compagnon"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="10sp" />

        <Button
            android:id="@+id/boutonMagasin"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/green"
            android:text="@string/store_button"
            android:textSize="10sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/layoutPopUp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="-10dp"
        android:rotation="90"
        android:src="@drawable/triangle" />
</RelativeLayout>
